Fix threejs-journey popup overlapping Resume Mode toggle button

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -46,12 +46,23 @@ html
     flex-direction: column;
     justify-content: flex-start;
     position: absolute;
-    top: 40px;
+    top: 90px;
     right: 40px;
     width: 420px;
     max-width: calc(100vw - 80px);
+    z-index: 140;
     -webkit-user-select: none;
     user-select: none;
+}
+
+@media (max-width: 700px)
+{
+    .threejs-journey
+    {
+        top: 80px;
+        right: 20px;
+        width: calc(100vw - 40px);
+    }
 }
 
 .threejs-journey.is-active
